--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
 							</div>
 
 							<div class="box">
-								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+								<a href="https://youtu.be/" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 								<div class="inner">
 									<h3>Pink Island Iced Tea</h3>
 									<p>The ultimate substitute: cranberry soda!</p>
-									<a href="https://youtu.be/s6zR2T9vn2c" class="button style3 fit" data-poptrox="youtube,800x400">Watch</a>
+									<a href="https://youtu.be/" class="button style3 fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
 
